Get a restaurant's detail from LLM in a specified format

--- a/details_from_llm/restaurant_detail.ipynb
+++ b/details_from_llm/restaurant_detail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,17 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The mood at Pho Binh on Beechnut in Houston is generally **casual, bustling, and family-friendly**.  It's a classic, no-frills Vietnamese pho spot, so expect a lively atmosphere, possibly with some wait times during peak hours.  Think energetic but comfortable, more focused on the food than a fine-dining experience.\n",
+      "I do not have access to real-time information, including restaurant details like menus, hours, or contact information.  To get the details of Pho Binh on Beechnut in Houston, I recommend trying the following:\n",
+      "\n",
+      "* **Google Search:** Search \"Pho Binh Beechnut Houston\" on Google.  This should bring up their Google My Business listing (if they have one), which often includes address, phone number, hours, photos, and sometimes even a menu.\n",
+      "* **Yelp:** Search for \"Pho Binh Beechnut Houston\" on Yelp.  Yelp provides user reviews, photos, and business information.\n",
+      "* **Other Online Directories:** Check other online directories like TripAdvisor, Zomato, or similar services.\n",
+      "* **Directly Call:** If you can find a phone number through any of the above methods, calling them directly is the most reliable way to get up-to-date information.\n",
       "\n",
       "\n",
-      "Summary: Pho Binh on Beechnut is a popular Houston institution known for its consistently good, affordable pho and other Vietnamese dishes.  It's a beloved neighborhood staple appreciated for its generous portions, authentic flavors, and quick service (despite the crowds). While the decor is simple, the focus is squarely on delivering delicious, traditional Vietnamese food at a reasonable price.  It's a great place for a quick, satisfying, and authentic meal.\n"
+      "Remember to specify \"Beechnut\" in your search to ensure you find the correct location.\n"
      ]
     }
    ],
@@ -80,6 +85,10 @@
     "restaurant_city = \"Houston\"\n",
     "restaurant_street = \"Beechnut\"\n",
     "\n",
+    "# restaurant_name = \"Biryani Pot\"\n",
+    "# restaurant_city = \"Houston\"\n",
+    "# restaurant_street = \"Westheimer\"\n",
+    "\n",
     "# restaurant_name = \"Chama Gaucha Brazilian Steakhouse\"\n",
     "# restaurant_city = \"Houston\"\n",
     "# restaurant_street = \"Westheimer\"\n",
@@ -87,7 +96,7 @@
     "# Define a query as a string.\n",
     "# query = f\"Give me a summary and review of {restaurant_name} in {restaurant_city} on {restaurant_street}\"\n",
     "\n",
-    "query = f\"Give me the mood and a summary of {restaurant_name} in {restaurant_city} on {restaurant_street}\"\n",
+    "query = f\"Give me the details of {restaurant_name} in {restaurant_city} on {restaurant_street}\"\n",
     "\n",
     "# Pass the query to the invoke method and print the result.\n",
     "response = llm.invoke(query)\n",
@@ -103,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,17 +148,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "**Summary:** Pho Binh on Beechnut in Houston is a popular Vietnamese restaurant known for its large portions of classic pho and other Vietnamese dishes at affordable prices.  It's a casual, family-friendly establishment.\n",
-      "**Moods:** Casual, bustling, family-friendly\n",
-      "**Highlight:**  Reviewers often cite the generous portion sizes and flavorful broth of the pho as highlights. Service is generally considered efficient, though not always overly attentive.  The value is excellent for the price.\n",
-      "**Rating:** 4.2\n"
+      "I need more information to answer your question.  My job is to help you get details about restaurants.  Please provide me with the name and location of the restaurant you'd like information on.\n"
      ]
     }
    ],
@@ -162,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Combining Chains"
+    "<!-- # Combining Chains -->"
    ]
   },
   {
