Swtiched to LLM to gemini-2.0-flash

--- a/details_from_llm/restaurant_detail.ipynb
+++ b/details_from_llm/restaurant_detail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "\n",
     "\n",
     "# Set the model name for our LLMs.\n",
-    "GEMINI_MODEL = \"gemini-1.5-flash\"\n",
+    "GEMINI_MODEL = \"gemini-2.0-flash\"\n",
     "\n",
     "# Load the API key to a variable.\n",
     "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,33 +61,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I do not have access to real-time information, including restaurant details like menus, hours, or contact information.  To get the details of Pho Binh on Beechnut in Houston, I recommend trying the following:\n",
+      "Okay, here's the information I could find about Biryani Pot on Westheimer in Houston:\n",
       "\n",
-      "* **Google Search:** Search \"Pho Binh Beechnut Houston\" on Google.  This should bring up their Google My Business listing (if they have one), which often includes address, phone number, hours, photos, and sometimes even a menu.\n",
-      "* **Yelp:** Search for \"Pho Binh Beechnut Houston\" on Yelp.  Yelp provides user reviews, photos, and business information.\n",
-      "* **Other Online Directories:** Check other online directories like TripAdvisor, Zomato, or similar services.\n",
-      "* **Directly Call:** If you can find a phone number through any of the above methods, calling them directly is the most reliable way to get up-to-date information.\n",
-      "\n",
-      "\n",
-      "Remember to specify \"Beechnut\" in your search to ensure you find the correct location.\n"
+      "*   **Address:** 5655 Westheimer Rd Suite A, Houston, TX 77056\n",
+      "*   **Phone:** (713) 357-9777\n",
+      "*   **Cuisine:** Indian, Pakistani, Biryani\n",
+      "*   **Hours:**\n",
+      "    *   Sunday - Thursday: 11 AM - 10 PM\n",
+      "    *   Friday - Saturday: 11 AM - 11 PM\n",
+      "*   **Menu Highlights:** Known for their various biryanis, curries, and Indo-Chinese dishes.\n",
+      "*   **Service Options:**\n",
+      "    *   Dine-in\n",
+      "    *   Takeout\n",
+      "    *   Delivery\n",
+      "*   **Online Presence:** They have a website and are active on social media.\n",
+      "*   **Price:** $$ (Mid-range)\n"
      ]
     }
    ],
    "source": [
-    "restaurant_name = \"Pho Binh\"\n",
-    "restaurant_city = \"Houston\"\n",
-    "restaurant_street = \"Beechnut\"\n",
-    "\n",
-    "# restaurant_name = \"Biryani Pot\"\n",
+    "# restaurant_name = \"Pho Binh\"\n",
     "# restaurant_city = \"Houston\"\n",
-    "# restaurant_street = \"Westheimer\"\n",
+    "# restaurant_street = \"Beechnut\"\n",
+    "\n",
+    "restaurant_name = \"Biryani Pot\"\n",
+    "restaurant_city = \"Houston\"\n",
+    "restaurant_street = \"Westheimer\"\n",
     "\n",
     "# restaurant_name = \"Chama Gaucha Brazilian Steakhouse\"\n",
     "# restaurant_city = \"Houston\"\n",
@@ -112,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,8 +133,10 @@
     "\n",
     "    **Summary:** [Summary of the restaurant]\n",
     "    **Moods:** [Moods of the restaurant]\n",
-    "    **Highlight:** [Food quality, Service, Value]\n",
+    "    **Highlight:** [quality of food, service, value]\n",
     "    **Rating:** [Rating]\n",
+    "    **Hours:** [hours of business]\n",
+    "    **Price:** [usual price range per person]\n",
     "\n",
     "    For example:\n",
     "    **Summary:** Chama Gaucha is a high-end churrascaria (Brazilian steakhouse) offering a wide selection of grilled meats carved tableside by gauchos (Brazilian cowboys)\n",
@@ -136,6 +144,9 @@
     "    **Highlight:** Reviewers consistently praise the \"perfectly cooked meats\" and the \"robust salad bar\" with fresh options. \n",
     "                The service is frequently described as \"impeccable\" and \"attentive,\" with staff ensuring glasses are filled and meat preferences are met.\n",
     "    **Rating:** 4.7\n",
+    "    **Hours:**  *   Sunday - Thursday: 11 AM - 10 PM\n",
+    "                *   Friday - Saturday: 11 AM - 11 PM\n",
+    "    **Price:**  $30 - $50\n",
     "\n",
     "    Do not include any extra text or formatting. \n",
     "\"\"\"\n",
@@ -148,14 +159,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I need more information to answer your question.  My job is to help you get details about restaurants.  Please provide me with the name and location of the restaurant you'd like information on.\n"
+      "**Summary:** Biryani Pot on Westheimer is a casual Indian restaurant specializing in various biryanis and other Indian dishes.\n",
+      "**Moods:** Casual, family-friendly, and bustling\n",
+      "**Highlight:** Reviewers often praise the flavorful and aromatic biryanis, generous portion sizes, and reasonable prices.\n",
+      "**Rating:** 4.0\n",
+      "**Hours:** * Sunday - Thursday: 11 AM - 10 PM\n",
+      "            * Friday - Saturday: 11 AM - 11 PM\n",
+      "**Price:** $15 - $25\n"
      ]
     }
    ],
