chore: Updated yelp review classifier

--- a/yelp_review_classification/get_yelp_restaurant_reviews_by_rating.ipynb
+++ b/yelp_review_classification/get_yelp_restaurant_reviews_by_rating.ipynb
@@ -352,6 +352,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get user_ids from yelp_reviews_with_user_info.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Load your labeled dataset\n",
+    "df = pd.read_csv(\"./Resources/yelp_reviews_with_mood_labels.csv\")\n",
+    "\n",
+    "# Extract unique user_ids and save to CSV\n",
+    "user_ids_df = pd.DataFrame(df[\"user_id\"].unique(), columns=[\"user_id\"])\n",
+    "user_ids_df.to_csv(\"./Resources/unique_user_ids.csv\", index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
