Added output parser

--- a/details_from_llm/restaurant_detail.ipynb
+++ b/details_from_llm/restaurant_detail.ipynb
@@ -2,13 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_google_genai import ChatGoogleGenerativeAI\n",
     "from dotenv import load_dotenv, find_dotenv\n",
     "from langchain import PromptTemplate\n",
+    "from langchain.output_parsers import PydanticOutputParser\n",
+    "from pydantic import Field, BaseModel\n",
+    "\n",
     "import os"
    ]
   },
@@ -21,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,12 +49,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Basic Query"
+    "# Create the LangChain Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,31 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 103,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Okay, here's the information I could find about Biryani Pot on Westheimer in Houston:\n",
-      "\n",
-      "*   **Address:** 5655 Westheimer Rd Suite A, Houston, TX 77056\n",
-      "*   **Phone:** (713) 357-9777\n",
-      "*   **Cuisine:** Indian, Pakistani, Biryani\n",
-      "*   **Hours:**\n",
-      "    *   Sunday - Thursday: 11 AM - 10 PM\n",
-      "    *   Friday - Saturday: 11 AM - 11 PM\n",
-      "*   **Menu Highlights:** Known for their various biryanis, curries, and Indo-Chinese dishes.\n",
-      "*   **Service Options:**\n",
-      "    *   Dine-in\n",
-      "    *   Takeout\n",
-      "    *   Delivery\n",
-      "*   **Online Presence:** They have a website and are active on social media.\n",
-      "*   **Price:** $$ (Mid-range)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# restaurant_name = \"Pho Binh\"\n",
     "# restaurant_city = \"Houston\"\n",
@@ -105,8 +86,8 @@
     "query = f\"Give me the details of {restaurant_name} in {restaurant_city} on {restaurant_street}\"\n",
     "\n",
     "# Pass the query to the invoke method and print the result.\n",
-    "response = llm.invoke(query)\n",
-    "print(response.content)"
+    "# response = llm.invoke(query)\n",
+    "# print(response.content)"
    ]
   },
   {
@@ -118,35 +99,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the format for the template.\n",
     "\n",
-    "format = \"\"\"You are a world famous restaurant critic.  Answer only questions that would be about restaurants.\n",
+    "format = \"\"\"You are a world famous restaurant expert.  Answer only questions that would be about restaurants.\n",
     "If the human asks questions not related to restaurant, remind them that your job is to help them get the details of a restaurnt\n",
     "Question: {query}\n",
     "Answer:\n",
     "\n",
-    "    **Your response must be in the following format:**\n",
+    "    **Your response should have the following information:**\n",
     "\n",
     "    **Summary:** [Summary of the restaurant]\n",
+    "    **Phone:** [Phone number of the restaurant]\n",
+    "    **Address:** [Address of the restaurent]\n",
     "    **Moods:** [Moods of the restaurant]\n",
     "    **Highlight:** [quality of food, service, value]\n",
     "    **Rating:** [Rating]\n",
     "    **Hours:** [hours of business]\n",
     "    **Price:** [usual price range per person]\n",
+    "    **Popular Items:** [popluar menu items]\n",
     "\n",
     "    For example:\n",
     "    **Summary:** Chama Gaucha is a high-end churrascaria (Brazilian steakhouse) offering a wide selection of grilled meats carved tableside by gauchos (Brazilian cowboys)\n",
+    "    **Phone:** (713) 357-9777\n",
+    "    **Address:** 5655 Westheimer Rd Suite A, Houston, TX 77056\n",
     "    **Moods:** Vibrant, lively, and celebratory\n",
     "    **Highlight:** Reviewers consistently praise the \"perfectly cooked meats\" and the \"robust salad bar\" with fresh options. \n",
     "                The service is frequently described as \"impeccable\" and \"attentive,\" with staff ensuring glasses are filled and meat preferences are met.\n",
     "    **Rating:** 4.7\n",
-    "    **Hours:**  *   Sunday - Thursday: 11 AM - 10 PM\n",
-    "                *   Friday - Saturday: 11 AM - 11 PM\n",
+    "    **Hours:**  Sunday - Thursday: 11 AM - 10 PM\n",
+    "                Friday - Saturday: 11 AM - 11 PM\n",
     "    **Price:**  $30 - $50\n",
+    "    **Popular Items:** Picanha, Churrasco, Salad Bar\n",
     "\n",
     "    Do not include any extra text or formatting. \n",
     "\"\"\"\n",
@@ -154,31 +141,11 @@
     "# Construct the prompt template.\n",
     "prompt_template = PromptTemplate(\n",
     "    input_variables=[\"query\"], \n",
-    "    template = format)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "**Summary:** Biryani Pot on Westheimer is a casual Indian restaurant specializing in various biryanis and other Indian dishes.\n",
-      "**Moods:** Casual, family-friendly, and bustling\n",
-      "**Highlight:** Reviewers often praise the flavorful and aromatic biryanis, generous portion sizes, and reasonable prices.\n",
-      "**Rating:** 4.0\n",
-      "**Hours:** * Sunday - Thursday: 11 AM - 10 PM\n",
-      "            * Friday - Saturday: 11 AM - 11 PM\n",
-      "**Price:** $15 - $25\n"
-     ]
-    }
-   ],
-   "source": [
-    "response = (prompt_template | llm).invoke(query)\n",
-    "print(response.content)  "
+    "    template = format)\n",
+    "\n",
+    "# Checking the response\n",
+    "# response = (prompt_template | llm).invoke(query)\n",
+    "# print(response.content)  \n"
    ]
   },
   {
@@ -190,10 +157,96 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the class for our parsed responses.\n",
+    "class restaurant_detail(BaseModel):\n",
+    "    phone: str = Field(description=\"Phone\")\n",
+    "    address: str = Field(description=\"Address\")\n",
+    "    summary: str = Field(description=\"Summary\")\n",
+    "    moods: str = Field(description=\"Moods\")\n",
+    "    highlight: str = Field(description=\"Highlight\")\n",
+    "    rating: str = Field(description=\"Rating\")\n",
+    "    hours: str = Field(description=\"Hours\")\n",
+    "    price: str = Field(description=\"Price\")\n",
+    "    popular_items: str = Field(description=\"Popular Items\")\n",
+    "\n",
+    "# Initialize the output parser using the schema.\n",
+    "parser = PydanticOutputParser(pydantic_object = restaurant_detail)\n",
+    "\n",
+    "# Get the output format instructions and print them.\n",
+    "instructions = parser.get_format_instructions()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a query as a string, combining with the instructions.\n",
+    "query += \"\\n\\n\" + instructions\n",
+    "\n",
+    "# Pass the query to the invoke method, and print the result.\n",
+    "response = (prompt_template | llm).invoke(query)\n",
+    "\n",
+    "# Parse the result, store it, and print it.\n",
+    "data = parser.parse(response.content)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(832) 742-5544\n",
+      "\n",
+      "650 Westheimer Rd Suite C, Houston, TX 77006\n",
+      "\n",
+      "Casual spot dishing out Indian & Pakistani staples such as biryani, curries & kebabs.\n",
+      "\n",
+      "Casual\n",
+      "\n",
+      "Flavorful biryani, generous portions, and affordable prices are frequently praised. Many reviewers appreciate the quick service and the variety of options available.\n",
+      "\n",
+      "4.0\n",
+      "\n",
+      "Sunday-Thursday 11AM–10PM, Friday-Saturday 11AM–11PM\n",
+      "\n",
+      "$10-20\n",
+      "\n",
+      "Chicken Biryani, Goat Biryani, Chicken 65\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display the data\n",
+    "print(data.phone + '\\n')\n",
+    "print(data.address + '\\n')\n",
+    "print(data.summary + '\\n')\n",
+    "print(data.moods + '\\n')\n",
+    "print(data.highlight + '\\n')\n",
+    "print(data.rating + '\\n')\n",
+    "print(data.hours + '\\n')\n",
+    "print(data.price + '\\n')\n",
+    "print(data.popular_items + '\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def assign_mood(text):"
+   ]
   }
  ],
  "metadata": {
