chore: added preprocessing

--- a/yelp_review_classification/get_restaurant_recommendation.ipynb
+++ b/yelp_review_classification/get_restaurant_recommendation.ipynb
@@ -478,6 +478,7 @@
     "\n",
     "    # Step 7: Display only important fields\n",
     "    display(mood_expert_reviews[[\n",
+    "        \"user_id\",\n",
     "        \"business_name\",\n",
     "        \"short_review\",\n",
     "        \"review_stars\",\n",
@@ -583,14 +584,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔍 Finding restaurants for mood: romantic\n"
+      "🔍 Finding restaurants for mood: refreshing\n"
      ]
     },
     {
@@ -614,6 +615,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>user_id</th>\n",
        "      <th>business_name</th>\n",
        "      <th>short_review</th>\n",
        "      <th>review_stars</th>\n",
@@ -622,55 +624,48 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5040</th>\n",
-       "      <td>Trattoria Carina</td>\n",
-       "      <td>(to the tune of \"Gorgeous\" by Taylor Swift)\\n\\nYou s...</td>\n",
+       "      <th>30040</th>\n",
+       "      <td>vFd8aBLg1kFcd0kCkoi-xw</td>\n",
+       "      <td>Thang Long Pho Restaurant</td>\n",
+       "      <td>The steamed chicken is fresh and perfectly cooked....</td>\n",
        "      <td>5.0</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>46071</th>\n",
-       "      <td>L'Angolo Ristorante</td>\n",
-       "      <td>(to the tune of That's Amore by Dean Martin)\\n\\nWhen...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4</td>\n",
+       "      <th>23026</th>\n",
+       "      <td>vFd8aBLg1kFcd0kCkoi-xw</td>\n",
+       "      <td>Red Poke Express</td>\n",
+       "      <td>Very fresh poke. I had build my own bowl with gree...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>58288</th>\n",
-       "      <td>Beiler's Bakery</td>\n",
-       "      <td>(To the tune of \"The Sign\" by Ace of Base)\\n\\nI, I'v...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>71863</th>\n",
-       "      <td>Wm Mulherin's Sons</td>\n",
-       "      <td>(to the tune of \"Bad at Love\" by Halsey)\\n\\nWhen I'm...</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4</td>\n",
+       "      <th>42233</th>\n",
+       "      <td>vFd8aBLg1kFcd0kCkoi-xw</td>\n",
+       "      <td>Dizengoff</td>\n",
+       "      <td>In my opinion it's a little bit to salty, it's not...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             business_name  \\\n",
-       "5040      Trattoria Carina   \n",
-       "46071  L'Angolo Ristorante   \n",
-       "58288      Beiler's Bakery   \n",
-       "71863   Wm Mulherin's Sons   \n",
+       "                      user_id              business_name  \\\n",
+       "30040  vFd8aBLg1kFcd0kCkoi-xw  Thang Long Pho Restaurant   \n",
+       "23026  vFd8aBLg1kFcd0kCkoi-xw           Red Poke Express   \n",
+       "42233  vFd8aBLg1kFcd0kCkoi-xw                  Dizengoff   \n",
        "\n",
-       "                                                  short_review  review_stars  \\\n",
-       "5040   (to the tune of \"Gorgeous\" by Taylor Swift)\\n\\nYou s...           5.0   \n",
-       "46071  (to the tune of That's Amore by Dean Martin)\\n\\nWhen...           5.0   \n",
-       "58288  (To the tune of \"The Sign\" by Ace of Base)\\n\\nI, I'v...           5.0   \n",
-       "71863  (to the tune of \"Bad at Love\" by Halsey)\\n\\nWhen I'm...           5.0   \n",
+       "                                                short_review  review_stars  \\\n",
+       "30040  The steamed chicken is fresh and perfectly cooked....           5.0   \n",
+       "23026  Very fresh poke. I had build my own bowl with gree...           4.0   \n",
+       "42233  In my opinion it's a little bit to salty, it's not...           4.0   \n",
        "\n",
        "       mood_expert_review_count  \n",
-       "5040                          4  \n",
-       "46071                         4  \n",
-       "58288                         4  \n",
-       "71863                         4  "
+       "30040                         3  \n",
+       "23026                         3  \n",
+       "42233                         3  "
       ]
      },
      "metadata": {},
@@ -716,14 +711,14 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>46071</th>\n",
-       "      <td>ryisT19-tzvMyVVi0iLvwA</td>\n",
-       "      <td>L'Angolo Ristorante</td>\n",
-       "      <td>1415 W Porter St</td>\n",
+       "      <th>30040</th>\n",
+       "      <td>vFd8aBLg1kFcd0kCkoi-xw</td>\n",
+       "      <td>Thang Long Pho Restaurant</td>\n",
+       "      <td>2534-36 Kensington Ave</td>\n",
        "      <td>Philadelphia</td>\n",
-       "      <td>[Restaurants, Italian]</td>\n",
-       "      <td>romantic</td>\n",
-       "      <td>4</td>\n",
+       "      <td>[Asian Fusion, Noodles, Vietnamese, Vegan, Restaurants, Bubble Tea, Food, Soup]</td>\n",
+       "      <td>refreshing</td>\n",
+       "      <td>3</td>\n",
        "      <td>5.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -731,14 +726,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                      user_id        business_name           address  \\\n",
-       "46071  ryisT19-tzvMyVVi0iLvwA  L'Angolo Ristorante  1415 W Porter St   \n",
+       "                      user_id              business_name  \\\n",
+       "30040  vFd8aBLg1kFcd0kCkoi-xw  Thang Long Pho Restaurant   \n",
        "\n",
-       "               city              categories      mood  \\\n",
-       "46071  Philadelphia  [Restaurants, Italian]  romantic   \n",
+       "                      address          city  \\\n",
+       "30040  2534-36 Kensington Ave  Philadelphia   \n",
        "\n",
-       "       mood_expert_review_count  review_stars  \n",
-       "46071                         4           5.0  "
+       "                                                                            categories  \\\n",
+       "30040  [Asian Fusion, Noodles, Vietnamese, Vegan, Restaurants, Bubble Tea, Food, Soup]   \n",
+       "\n",
+       "             mood  mood_expert_review_count  review_stars  \n",
+       "30040  refreshing                         3           5.0  "
       ]
      },
      "metadata": {},
@@ -747,9 +745,15 @@
    ],
    "source": [
     "# User Input:\n",
+    "\n",
     "# user_selected_mood = \"cozy\"\n",
     "# user_selected_mood = \"indulgent\"\n",
-    "user_selected_mood = \"romantic\"\n",
+    "# user_selected_mood = \"adventurous\" \n",
+    "# user_selected_mood = \"comforting\" \n",
+    "# user_selected_mood = \"energizing\"\n",
+    "# user_selected_mood = \"romantic\"\n",
+    "# user_selected_mood = \"festive\"\n",
+    "user_selected_mood = \"refreshing\"\n",
     "recommendation = full_chain_recommendation(customer_reviews_df, user_selected_mood)"
    ]
   },
