Added integration with translation

--- a/details_from_llm/restaurant_detail.ipynb
+++ b/details_from_llm/restaurant_detail.ipynb
@@ -1,8 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# This is a scratch notebook for development\n",
+    "The final entry function is get_details_from_llm in restaurant_details_from_llm.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +34,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LLM Model and API Key"
+    "## LLM Model and API Key"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,12 +64,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create the LangChain Model"
+    "## Create the LangChain Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,17 +109,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Templates for Instructions"
+    "## Templates for Instructions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the format for the template.\n",
-    "\n",
     "format = \"\"\"You are a world famous restaurant expert.  Answer only questions that would be about restaurants.\n",
     "If the human asks questions not related to restaurant, remind them that your job is to help them get the details of a restaurnt\n",
     "Question: {query}\n",
@@ -141,23 +155,19 @@
     "# Construct the prompt template.\n",
     "prompt_template = PromptTemplate(\n",
     "    input_variables=[\"query\"], \n",
-    "    template = format)\n",
-    "\n",
-    "# Checking the response\n",
-    "# response = (prompt_template | llm).invoke(query)\n",
-    "# print(response.content)  \n"
+    "    template = format)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<!-- # Combining Chains -->"
+    "## Define the output parser and parsing instructions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,11 +192,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define a query as a string, combining with the instructions.\n",
+    "# Combine the query with the instructions.\n",
     "query += \"\\n\\n\" + instructions\n",
     "\n",
     "# Pass the query to the invoke method, and print the result.\n",
@@ -198,30 +208,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(832) 742-5544\n",
+      "(832) 767-2525\n",
       "\n",
       "650 Westheimer Rd Suite C, Houston, TX 77006\n",
       "\n",
-      "Casual spot dishing out Indian & Pakistani staples such as biryani, curries & kebabs.\n",
+      "Biryani Pot is a restaurant that specializes in Indian and Pakistani cuisine, with a focus on biryani dishes.\n",
       "\n",
-      "Casual\n",
+      "Casual, family-friendly\n",
       "\n",
-      "Flavorful biryani, generous portions, and affordable prices are frequently praised. Many reviewers appreciate the quick service and the variety of options available.\n",
+      "Known for its flavorful biryanis and affordable prices. Many reviewers praise the generous portion sizes and authentic taste. Good value for money.\n",
       "\n",
       "4.0\n",
       "\n",
-      "Sunday-Thursday 11AM–10PM, Friday-Saturday 11AM–11PM\n",
+      "Sunday-Thursday 11 AM - 10 PM, Friday-Saturday 11 AM - 11 PM\n",
       "\n",
-      "$10-20\n",
+      "$10 - $20\n",
       "\n",
-      "Chicken Biryani, Goat Biryani, Chicken 65\n",
+      "Chicken Biryani, Goat Biryani, Vegetable Biryani\n",
       "\n"
      ]
     }
@@ -237,15 +247,6 @@
     "print(data.hours + '\\n')\n",
     "print(data.price + '\\n')\n",
     "print(data.popular_items + '\\n')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def assign_mood(text):"
    ]
   }
  ],
